cluster/technitium-dns/deployment-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium-dns-mysql-deployment
  namespace: technitium-dns
spec:
  replicas: 1
  serviceName: technitium-dns-mysql
  selector:
    matchLabels:
      app: technitium-dns-mysql
  template:
    metadata:
      labels:
        app: technitium-dns-mysql
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                # when possible, run on the network controller
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - network
      containers:
        - env:
            - name: MARIADB_RANDOM_ROOT_PASSWORD
              value: "1"
            - name: MARIADB_USER
              value: technitiumdns
            - name: MARIADB_DATABASE
              value: technitiumdns
          image: docker.io/library/mariadb:11.7.2
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: technitium-dns-pvc-mysql
        - name: initdb-vol
          persistentVolumeClaim:
            claimName: technitium-dns-pvc-initdb
