cluster/technitium-dns/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium-dns-postgresql-deployment
  namespace: technitium-dns
spec:
  replicas: 1
  serviceName: technitium-dns-postgresql
  selector:
    matchLabels:
      app: technitium-dns-postgresql
  template:
    metadata:
      labels:
        app: technitium-dns-postgresql
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                # when possible, run on the network controller
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - network
      containers:
        - envFrom:
            - secretRef:
                name: technitium-dns-env
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/postgres:18.6
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresql-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: technitium-dns-pvc-postgresql
