cluster/technitium-dns/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns-postgresql-service
  namespace: technitium-dns
spec:
  type: ClusterIP
  selector:
    app: technitium-dns-postgresql
  ports:
    - port: 5432
      protocol: TCP
