cluster/technitium-dns/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: technitium-dns-route
    namespace: technitium-dns
    annotations:
        k8s-dns.nathanv.me/hostname: technitium-dns.nathanv.app
        k8s-dns.nathanv.me/external: tunnel.nathanv.app
        k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
    entryPoints:
      - websecure
    routes:
      - match: Host(`technitium-dns.nathanv.app`)
        kind: Rule
        services:
          - name: technitium-dns-service
            port: 5380
    tls:
        certResolver: le
        domains:
          - sans:
              - "*.nathanv.app"
